--- a/study_code/a_project/scss/src/main/_main_event_handhelds.scss
+++ b/study_code/a_project/scss/src/main/_main_event_handhelds.scss
@@ -2,67 +2,63 @@
 
 // ~ 767px ------------------------------------------------------------------
 @media all and (max-width: 767px){
-  #eventBox {
-    .event_area {
-      flex-direction: column; justify-content: flex-start;
-      flex-wrap: nowrap;
-      width: 100%; height: calc($event_phone_height * 2 + 6vw);
-      // height: 104.2vw;
+  .event_area {
+    flex-direction: column; justify-content: flex-start;
+    flex-wrap: nowrap;
+    width: 100%; height: calc($event_phone_height * 2 + 6vw);
+    // height: 104.2vw;
+  } // .event_area
 
-      @at-root .event {
-        width: $event_phone_width; height: $event_phone_height;
-        // margin-left: 20px;
-        // height: 49.5vw;
-        margin: auto;
-        margin-top: 6vw; 
+  .event {
+    width: $event_phone_width; height: $event_phone_height;
+    // margin-left: 20px;
+    // height: 49.5vw;
+    margin: auto;
+    margin-top: 6vw; 
 
-        a {
-          .event_img {
-            width: $event_phone_width; height: $event_phone_width;
-          }
-          .event_title {
-            width: $event_phone_width;
-          }
-        } // a
+    a {
+      .event_img {
+        width: $event_phone_width; height: $event_phone_width;
+      }
+      .event_title {
+        width: $event_phone_width;
+      }
+    } // a
 
-        // &:nth-child(2n-1){ margin-left: 0;}
-        &:nth-child(1){ margin-top: 0;}
-        // &:nth-child(2){ margin-top: 0;}
-      } // .event
-    } // .event_area
-  } // #eventBox
+    // &:nth-child(2n-1){ margin-left: 0;}
+    &:nth-child(1){ margin-top: 0;}
+    // &:nth-child(2){ margin-top: 0;}
+  } // .event
 
 } // ~ 767px =================================================================
 
 // 768px ~ 1279px ------------------------------------------------------
 @media all and (min-width:768px) and (max-width: 1279px){
-  #eventBox {
-    .event_area {
-      justify-content: space-around;
-      flex-wrap: wrap;
-      width: 100%; height: calc($event_height * 2 + 5.2vw);
-      // height: 104.2vw;
+  .event_area {
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%; height: calc($event_height * 2 + 5.2vw);
+    // height: 104.2vw;
+  } // .event_area
 
-      @at-root .event {
-        width: 30vw; height: $event_height;
-        margin-left: 20px;
-        // height: 49.5vw;
-        margin-top: 5.2vw;
+  .event {
+    width: 30vw; height: $event_height;
+    margin-left: 20px;
+    // height: 49.5vw;
+    margin-top: 5.2vw;
 
-        a {
-          .event_img {
-            width: 30vw; height: 30vw;
-          }
-          .event_title {
-            width: 30vw;
-          }
-        } // a
+    a {
+      .event_img {
+        width: 30vw; height: 30vw;
+      }
+      .event_title {
+        width: 30vw;
+      }
+    } // a
 
-        &:nth-child(2n-1){ margin-left: 0;}
-        &:nth-child(1){ margin-top: 0;}
-        &:nth-child(2){ margin-top: 0;}
-      } // .event
-    } // .event_area
-  } // #eventBox
+    &:nth-child(2n-1){ margin-left: 0;}
+    &:nth-child(1){ margin-top: 0;}
+    &:nth-child(2){ margin-top: 0;}
+  } // .event
 
 } // ~1279px ===============================================================
