--- a/study_code/a_project/scss/common/_footBox.scss
+++ b/study_code/a_project/scss/common/_footBox.scss
@@ -12,7 +12,7 @@
     background-color: $color_black;
   } // #footBox
 
-  @at-root .foot_top_area {
+  .foot_top_area {
     width: 100%; height: 120px;
     margin: auto;
     margin-bottom: 40px;
@@ -35,7 +35,7 @@
     }
   } // .foot_top_area
 
-  @at-root .foot_main_area {
+  .foot_main_area {
     position: relative;
     width: 78.125vw; max-width: 800px; height: auto;
     margin: auto;
@@ -61,6 +61,7 @@
 
       a { @include full;}
     } // .foot_main_btn
+  } // .foot_main_area
 
 
     .foot_info p { 
@@ -73,29 +74,27 @@
       }
     }
 
-    .foot_bottom_btn {
-      display: flex; justify-content: space-between;
-      position: absolute;
-      bottom: 0; right: 0;
-      width: 80px; height: auto;
+  .foot_bottom_btn {
+    display: flex; justify-content: space-between;
+    position: absolute;
+    bottom: 0; right: 0;
+    width: 80px; height: auto;
 
+    li {
+      margin-right: 20px;
+    } // li
 
-      li {
-        margin-right: 20px;
-
-        @at-root .foot_facebook a {
-          display: block;
-          width: 30px; height: 30px;
-          @include img('facebook.png');
-        }
-        @at-root .foot_instagram a{
-          display: block;
-          width: 30px; height: 30px;
-          @include img('instagram.png');
-        }
-      }
+    @at-root .foot_facebook a {
+      display: block;
+      width: 30px; height: 30px;
+      @include img('facebook_black.png');
     }
-  } // .foot_main_area
+    @at-root .foot_instagram a{
+      display: block;
+      width: 30px; height: 30px;
+      @include img('instagram_black.png');
+    }
+  } // .foot_bottom_btn
 
 } // ~767px ======================================================================
 
@@ -108,7 +107,7 @@
     background-color: $color_black;
   } // #footBox
 
-  @at-root .foot_top_area {
+  .foot_top_area {
     width: 100%; height: 120px;
     margin: auto;
     margin-bottom: 40px;
@@ -135,63 +134,61 @@
     position: relative;
     width: 78.125vw; max-width: 800px; height: auto;
     margin: auto;
-    .foot_main_btn {
-      display: flex; justify-content: space-between;
-      flex-wrap: wrap;
-      width: 100%; height: auto;
-      font-size: 16px;
-      text-align: left; color: $color_gray;
-      margin-bottom: 30px;
-
-      li { position: relative; margin-right: 15px; padding-right: 4vw; }
-      li:last-child {margin-right: 0; padding-right: 0;}
-      li::after {
-        content: ""; display: block;
-        position: absolute; top: 50%; right: 0;
-        width: 3px; height: 3px;
-        background-color: $color_gray;
-      }
-      li:last-child::after { display: none; }
-
-      .foot_personal { font-weight: 700;}
-
-      a { @include full;}
-    } // .foot_main_btn
-
-
-    .foot_info p { 
-      display: none;
-      &.copyright { 
-        display: block; 
-        width: 43.75vw; max-width: 336px; height: auto;
-        margin: auto;
-        color: $color_gray;
-      }
-    }
-
-    .foot_bottom_btn {
-      display: flex; justify-content: space-between;
-      position: absolute;
-      bottom: 0; right: 0;
-      width: 80px; height: auto;
-
-
-      li {
-        margin-right: 20px;
-
-        @at-root .foot_facebook a {
-          display: block;
-          width: 30px; height: 30px;
-          @include img('facebook.png');
-        }
-        @at-root .foot_instagram a{
-          display: block;
-          width: 30px; height: 30px;
-          @include img('instagram.png');
-        }
-      }
-    }
   } // .foot_main_area
+  .foot_main_btn {
+    display: flex; justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%; height: auto;
+    font-size: 16px;
+    text-align: left; color: $color_gray;
+    margin-bottom: 30px;
+
+    li { position: relative; margin-right: 15px; padding-right: 4vw; }
+    li:last-child {margin-right: 0; padding-right: 0;}
+    li::after {
+      content: ""; display: block;
+      position: absolute; top: 50%; right: 0;
+      width: 3px; height: 3px;
+      background-color: $color_gray;
+    }
+    li:last-child::after { display: none; }
+
+    .foot_personal { font-weight: 700;}
+
+    a { @include full;}
+  } // .foot_main_btn
+
+  .foot_info p { 
+    display: none;
+    &.copyright { 
+      display: block; 
+      width: 43.75vw; max-width: 336px; height: auto;
+      margin: auto;
+      color: $color_gray;
+    }
+  }
+
+  .foot_bottom_btn {
+    display: flex; justify-content: space-between;
+    position: absolute;
+    bottom: 0; right: 0;
+    width: 80px; height: auto;
+
+    li {
+      margin-right: 20px;
+    } // li
+
+    @at-root .foot_facebook a {
+      display: block;
+      width: 30px; height: 30px;
+      @include img('facebook_black.png');
+    }
+    @at-root .foot_instagram a{
+      display: block;
+      width: 30px; height: 30px;
+      @include img('instagram_black.png');
+    }
+  } // .foot_bottom_btn
 } // 768px ~ 1279px =====================================================================
 
 // 1280px ~ ----------------------------------------------------------------------
@@ -202,92 +199,90 @@
     margin: auto;
     padding: 70px 60px;
     background-color: $color_black;
-  
-    @at-root .foot_top_area {
-      display: flex; justify-content: space-between;
-      width: 100%; max-width: 1920px; height: 40px;
-      margin: auto;
-      margin-bottom: 30px;
-
-      h2 {
-        width: 112px; height: 30px;
-        @include img('footer-logo-text.svg');
-      }
-      .foot_top_btn {
-        display: flex; justify-content: space-between;
-        width: 300px; height: 30px;
-        font-size: 16px;
-        text-align: left; color: $color_gray;
-
-        & > div { margin-right: 20px; line-height: 30px;}
-        & > div:last-child { margin-right: 0;}
-      }
-    } // .foot_top_area
-
-    @at-root .foot_main_area {
-      position: relative;
-      width: 100%; max-width: 1920px; height: 300px;
-      margin: auto;
-
-      .foot_main_btn {
-        display: flex; justify-content: space-between;
-        width: 600px; height: 30px;
-        font-size: 16px;
-        text-align: left; color: $color_gray;
-
-        li { position: relative; margin-right: 0px; padding-right: 30px; }
-        li:last-child {margin-right: 0; padding-right: 0;}
-        li::after {
-          content: ""; display: block;
-          position: absolute; top: calc(50% - 5px); right: 0;
-          width: 3px; height: 3px;
-          background-color: $color_gray;
-        }
-        li:last-child::after { display: none; }
-
-        .foot_personal { font-weight: 700;}
-
-        a { @include full;}
-      } // .foot_main_btn
-
-      .foot_info {
-        width: 600px; height: 250px;
-        margin-top: 40px;
-
-        p { 
-          display: block;
-          margin-bottom: 20px;
-          color: $color_gray;
-        
-          &:last-child { margin-bottom: 0;}
-        }
-        
-      } // .foot_info
-
-      .foot_bottom_btn {
-        display: flex; justify-content: space-between;
-        position: absolute;
-        bottom: 0; right: 0;
-        width: 80px; height: auto;
-
-
-        li {
-          margin-right: 20px;
-
-          @at-root .foot_facebook a {
-            display: block;
-            width: 30px; height: 30px;
-            @include img('facebook_white.png');
-          }
-          @at-root .foot_instagram a{
-            display: block;
-            width: 30px; height: 30px;
-            @include img('instagram_white.png');
-          }
-        }
-      }
-    } // .foot_main_area
   } // #footBox
+
+  .foot_top_area {
+    display: flex; justify-content: space-between;
+    width: 100%; max-width: 1920px; height: 40px;
+    margin: auto;
+    margin-bottom: 30px;
+
+    h2 {
+      width: 112px; height: 30px;
+      @include img('footer-logo-text.svg');
+    }
+    .foot_top_btn {
+      display: flex; justify-content: space-between;
+      width: 300px; height: 30px;
+      font-size: 16px;
+      text-align: left; color: $color_gray;
+
+      & > div { margin-right: 20px; line-height: 30px;}
+      & > div:last-child { margin-right: 0;}
+    }
+  } // .foot_top_area
+
+  .foot_main_area {
+    position: relative;
+    width: 100%; max-width: 1920px; height: 300px;
+    margin: auto;
+  } // .foot_main_area
+
+  .foot_main_btn {
+    display: flex; justify-content: space-between;
+    width: 600px; height: 30px;
+    font-size: 16px;
+    text-align: left; color: $color_gray;
+
+    li { position: relative; margin-right: 0px; padding-right: 30px; }
+    li:last-child {margin-right: 0; padding-right: 0;}
+    li::after {
+      content: ""; display: block;
+      position: absolute; top: calc(50% - 5px); right: 0;
+      width: 3px; height: 3px;
+      background-color: $color_gray;
+    }
+    li:last-child::after { display: none; }
+
+    .foot_personal { font-weight: 700;}
+
+    a { @include full;}
+  } // .foot_main_btn
+  
+  .foot_info {
+    width: 600px; height: 250px;
+    margin-top: 40px;
+
+    p { 
+      display: block;
+      margin-bottom: 20px;
+      color: $color_gray;
+    
+      &:last-child { margin-bottom: 0;}
+    }
+    
+  } // .foot_info
+
+  .foot_bottom_btn {
+    display: flex; justify-content: space-between;
+    position: absolute;
+    bottom: 0; right: 0;
+    width: 80px; height: auto;
+    li {
+      margin-right: 20px;
+    }
+
+    @at-root .foot_facebook a {
+      display: block;
+      width: 30px; height: 30px;
+      @include img('facebook_white.png');
+    }
+    @at-root .foot_instagram a{
+      display: block;
+      width: 30px; height: 30px;
+      @include img('instagram_white.png');
+    }
+  }
 } // 1280px ~ ====================================================================
 
 
