--- a/study_code/a_project/scss/src/main/_main_awards_pc.scss
+++ b/study_code/a_project/scss/src/main/_main_awards_pc.scss
@@ -4,89 +4,93 @@
 @media all and (min-width: 1280px){
   #awardsBox {
     height: 500px;
-  
-    @at-root .awards_area {
-      height: 300px;
-      
-      
-      @at-root .awards_btn {
-        position: absolute;
-        top: calc(50% - 25px); z-index: 1;
-        width: 100%; max-width: 1920px; height: 50px; margin: auto;
-        > div {
-          position: absolute;
-          bottom: 50%;
-          width: 70px; height: 70px;
-          &:hover { background-color: rgba($color_black, 0.4); border-radius: 4px; }
-          &:focus { border: 3px solid $color_black; border-radius: 4px; }
-        }
-        .awards_after_btn {
-          right: 20px;
-
-          button {
-            @include full;
-            @include img('forward_orange.png');
-          }
-        } // .awards_after_btn
-  
-        .awards_before_btn {
-          left: 20px;
-  
-          button {
-            @include full;
-            @include img('back_orange.png');
-          }
-        }
-  
-      } // .awards_btn
-
-      @at-root .awards_indicator {
-        display: flex; justify-content: space-between;
-        position: absolute;
-        bottom: 20px; left: 0; right: 0;
-        width: 220px; height: 20px;
-        margin: auto;
-  
-        .awards_circle {
-          width: 20px; height: 20px;
-          // margin-right: 30px;
-          border-radius: 100%;
-          background-color: $color_primary_circle;
-  
-          &.on { background-color: $color_primary; }
-          button {
-            @include full;
-            border-radius: 100%;
-            &:hover { background-color: rgba($color: $color_black, $alpha: 0.3);}
-            &:focus { border: 3px solid $color_black;}
-          }
-        }
-      } // .awards_indicator
-  
-      @at-root .awards_main {
-        width: 90.625vw; max-width: 1740px; height: 220px;
-        margin: auto;
-  
-        .awards {
-          width: 220px; height: 220px;
-          margin: 0 20px;
-          
-          &:nth-child(1) {
-            width: 160px; height: 160px;
-            margin: auto;
-            @include img_black('awards_01.jpg');
-          }
-          &:nth-child(5) {
-            width: 160px; height: 160px;
-            margin: auto;
-            @include img_black('awards_05.jpg');
-          }
-          
-          &:nth-child(n+6){display: none;}
-        }
-
-      } // .awards_main
-    } // .awards_area
   } // #awardsBox
+
+  .awards_area {
+    height: 300px;
+  } // .awards_area
+  
+  .awards_btn {
+    position: absolute;
+    top: calc(50% - 25px); z-index: 1;
+    width: 100%; max-width: 1920px; height: 50px; margin: auto;
+    > div {
+      position: absolute;
+      bottom: 50%;
+      width: 70px; height: 70px;
+      &:hover { background-color: rgba($color_black, 0.4); border-radius: 4px; }
+      &:focus { border: 3px solid $color_black; border-radius: 4px; }
+    }
+    .awards_after_btn {
+      right: 20px;
+
+      button {
+        @include full;
+        @include img('forward_orange.png');
+      }
+      
+    } // .awards_after_btn
+
+    .awards_before_btn {
+      left: 20px;
+
+      button {
+        @include full;
+        @include img('back_orange.png');
+      }
+    }
+  } // .awards_btn
+
+  .awards_indicator {
+    display: flex; justify-content: space-between;
+    position: absolute;
+    bottom: 20px; left: 0; right: 0;
+    width: 220px; height: 20px;
+    margin: auto;
+
+    .awards_circle {
+      width: 20px; height: 20px;
+      // margin-right: 30px;
+      border-radius: 100%;
+      background-color: $color_primary_circle;
+
+      &.on { background-color: $color_primary; }
+      button {
+        @include full;
+        border-radius: 100%;
+        &:hover { background-color: rgba($color: $color_black, $alpha: 0.3);}
+        &:focus { border: 3px solid $color_black;}
+      }
+    }
+  } // .awards_indicator
+
+  .awards_main {
+    width: 90.625vw; max-width: 1740px; height: 220px;
+    margin: auto;
+
+    .awards {
+      width: 220px; height: 220px;
+      margin: 0 20px;
+
+      &.black{
+        width: 160px; height: 160px;
+        margin: auto;
+      }
+      
+      &:nth-child(1) {
+        width: 160px; height: 160px;
+        margin: auto;
+        @include img_black('awards_01.jpg');
+      }
+      &:nth-child(5) {
+        width: 160px; height: 160px;
+        margin: auto;
+        @include img_black('awards_05.jpg');
+      }
+      
+      &:nth-child(n+6){display: none;}
+    }
+
+  } // .awards_main
 
 } // 1280px ~ ====================================================================
