--- a/study_code/a_project/scss/src/main/_main_benefitBox.scss
+++ b/study_code/a_project/scss/src/main/_main_benefitBox.scss
@@ -4,53 +4,52 @@
   width: 100%; height: 500px;
   margin-top: 20px;
   background-color: $color_primary_light;
-
-  @at-root .benefit_title_area {
-    width: 280px; height: 100px;
-    margin: auto;
-
-    .benefit_title {
-      width: 280px; height: 60px;
-      margin: auto;
-      border-radius: 30px;
-      background-color: $color_primary;
-      text-align: center; line-height: 60px;
-      font-size: 36px; font-weight: 700;
-      color: $color_white;
-    }
-
-    .benefit_title_detail {
-      width: 260px; height: 20px;
-      margin: auto; margin-top: 16px;
-      text-align: center; line-height: 20px;
-    }
-
-  } // .benefit_title_area
-
-  @at-root .benefit_detail_area {
-    margin: auto;
-
-    .benefit {
-      margin: auto; 
-      margin-top: 15px;
-      text-align: center; font-size: 20px;
-
-      .benefit_img {
-        min-width: 40px; width: 10vw; max-width: 75px; 
-        min-height: 40px; height: 10vw; max-height: 75px;
-        margin: auto; margin-bottom: 20px;
-        background-color: $color_primary;
-        border-radius: 100%;
-      }
-      .benefit_img_coupon { @include img($file:'wallet.png', $size: 70% auto)};
-      .benefit_img_review { @include img($file:'coin.png', $size: 70% auto)};
-      .benefit_img_friend { @include img($file:'hands.png', $size: 70% auto)};
-
-      .benefit_text { font-size: 20px; }
-      .benefit_bold { font-weight: 700; }
-    } // .benefit
-  } // .benefit_detail_area
 } // #benefitBox
+
+.benefit_title_area {
+  width: 280px; height: 100px;
+  margin: auto;
+
+  .benefit_title {
+    width: 280px; height: 60px;
+    margin: auto;
+    border-radius: 30px;
+    background-color: $color_primary;
+    text-align: center; line-height: 60px;
+    font-size: 36px; font-weight: 700;
+    color: $color_white;
+  }
+
+  .benefit_title_detail {
+    width: 260px; height: 20px;
+    margin: auto; margin-top: 16px;
+    text-align: center; line-height: 20px;
+  }
+} // .benefit_title_area
+
+.benefit_detail_area {
+  margin: auto;
+
+  .benefit {
+    margin: auto; 
+    margin-top: 15px;
+    text-align: center; font-size: 20px;
+
+    .benefit_img {
+      min-width: 40px; width: 10vw; max-width: 75px; 
+      min-height: 40px; height: 10vw; max-height: 75px;
+      margin: auto; margin-bottom: 20px;
+      background-color: $color_primary;
+      border-radius: 100%;
+    }
+    .benefit_img_coupon { @include img($file:'wallet.png', $size: 70% auto)};
+    .benefit_img_review { @include img($file:'coin.png', $size: 70% auto)};
+    .benefit_img_friend { @include img($file:'hands.png', $size: 70% auto)};
+
+    .benefit_text { font-size: 20px; }
+    .benefit_bold { font-weight: 700; }
+  } // .benefit
+} // .benefit_detail_area
 
 @import './main_benefitBox_handhelds';
 @import './main_benefitBox_pc';
