--- a/study_code/a_project/scss/src/main/_main_bestBox_pc.scss
+++ b/study_code/a_project/scss/src/main/_main_bestBox_pc.scss
@@ -2,30 +2,28 @@
 
 // 1280px ~ ----------------------------------------------------------------
 @media all and (min-width: 1280px){
-  #bestBox {
-    
-    @at-root .best_area {
-      justify-content: space-around; flex-wrap: wrap;
-      overflow: hidden;
-      // width: 78.125vw; 
-      width: 100%; height: 430px;
+
+  .best_area {
+    justify-content: space-around; flex-wrap: wrap;
+    overflow: hidden;
+    // width: 78.125vw; 
+    width: 100%; height: 430px;
+  } // .best_area
   
-      .best_item {
-        width: 320px; height: 420px;
-  
-        &:first-child { margin-left: 0;}
-        a { 
-          .best_img {
-            width: 320px; height: 320px;
-          }
-          .best_text {
-            width: 320px; height: 100px;
-            padding: 0 10px;
-            /* background-color: var(--color-sample1); */
-          }
-        } // a
-      } // .best_item
-    } // .best_area
-  } // #bestBox
+  .best_item {
+    width: 320px; height: 420px;
+
+    &:first-child { margin-left: 0;}
+    a { 
+      .best_img {
+        width: 320px; height: 320px;
+      }
+      .best_text {
+        width: 320px; height: 100px;
+        padding: 0 10px;
+        /* background-color: var(--color-sample1); */
+      }
+    } // a
+  } // .best_item
 
 } // 1280px ~ ====================================================================
