--- a/study_code/a_project/scss/src/main/_main_viewBox_handhelds.scss
+++ b/study_code/a_project/scss/src/main/_main_viewBox_handhelds.scss
@@ -3,17 +3,15 @@
 // ~1279px ------------------------------------------------------
 @media all and (max-width: 1279px){
 
-  #viewBox {
-    @at-root .view_area {
-      width: 100%; height: 90vw;
-      background-color: $color_gray;
+  .view_area {
+    width: 100%; height: 90vw;
+    background-color: $color_gray;
 
-      .view_btn {
-        left: 0; right: 0;
-      }
-    } // .view_area
-    .side_view_area{ display: none;}
-  } // #viewBox
+    .view_btn {
+      left: 0; right: 0;
+    }
+  } // .view_area
+  .side_view_area{ display: none;}
 
 }// ~1279px ===============================================================
 
